--- a/ReadMe
+++ b/ReadMe
@@ -25,3 +25,16 @@ This is a banking overview made in vuejs
 
 #run 'npm run test:unit'
 
+
+
+AZ-links
+
+checkin link -
+
+https://urldefense.com/v3/__https://examlaunchpad.pearsonvue.com/entry-point/launch-exam/MICROSOFT/OP?registrationToken=BOhbvuB3*2BALjwD2OPEseCFnEz2AkPqqSSXxBrHKM892fPlwh6gsJiycMsdf3fXMO96J4x7QlwttoV0M*2BYRtkhhsrrfY3ysseFakSvw4TEedM64C*2B*2FDYanCGb*2BqGnTXg1egwyJSVcO8oclf0dZvUdqg*3D*3D&locale=en-US__;JSUlJSUlJQ!!OrxsNty6D4my!7JTtwTORoYeJj3rSclV6eLLZ6DVkirYse6raEx_oZY83Izd6d-IrDV9_tdwGiU76i3_K3z8SWHt0lya6_lSIqp95yDySuEZ1MJs$
+
+
+
+system test link -
+
+https://urldefense.com/v3/__https://system-test.onvue.com/system_test?customer=pearson_vue&clientcode=MICROSOFT&candidate_id=292513796&registration_id=481780422&locale=en-US__;!!OrxsNty6D4my!7JTtwTORoYeJj3rSclV6eLLZ6DVkirYse6raEx_oZY83Izd6d-IrDV9_tdwGiU76i3_K3z8SWHt0lya6_lSIqp95yDySXa9lms0$
