--- a/ReadMe
+++ b/ReadMe
@@ -38,3 +38,15 @@ https://urldefense.com/v3/__https://examlaunchpad.pearsonvue.com/entry-point/lau
 system test link -
 
 https://urldefense.com/v3/__https://system-test.onvue.com/system_test?customer=pearson_vue&clientcode=MICROSOFT&candidate_id=292513796&registration_id=481780422&locale=en-US__;!!OrxsNty6D4my!7JTtwTORoYeJj3rSclV6eLLZ6DVkirYse6raEx_oZY83Izd6d-IrDV9_tdwGiU76i3_K3z8SWHt0lya6_lSIqp95yDySXa9lms0$
+
+
+Worldline Interview
+
+1.  let arr = [2, "b", 4, "d", 3, "a", "c", "e", 5, 1];
+
+    outpot = [1,2,3,4,5 ,a,b,c,d,e]
+
+
+----------------------
+
+2. In React Take input and list down the input values and display.
